Fixed kinghorn citation.

--- a/chapter-4.tex
+++ b/chapter-4.tex
@@ -1,6 +1,6 @@
 \chapter{Implementation of the Model}
 
-The model of computation defined above was implemented in the DrScheme integrated development environment.  Haskell and ML modules are written in subsets of their real syntaxes and compiled to Scheme modules.  Scheme modules are written with the Scheme language supported by the Scheme compiler of DrScheme.  A module defined in a particular language exports sets of declarations for the other languages and only imports sets of declarations from other modules meant only for its language.  Haskell can import ML and Scheme expressions, ML can import Scheme expressions, and Scheme can import Haskell expressions.  Haskell and ML use a form of type reconstruction called let-polymorphism instead of the explicit type system System F.  The domain of numbers for all languages is integers.  All languages have boolean values and operations, additional arithmetic operations, and composite data.  The majority of the ML implementation was taken from Kinghorn \ref{TODO: cite kinghorn}.
+The model of computation defined above was implemented in the DrScheme integrated development environment.  Haskell and ML modules are written in subsets of their real syntaxes and compiled to Scheme modules.  Scheme modules are written with the Scheme language supported by the Scheme compiler of DrScheme.  A module defined in a particular language exports sets of declarations for the other languages and only imports sets of declarations from other modules meant only for its language.  Haskell can import ML and Scheme expressions, ML can import Scheme expressions, and Scheme can import Haskell expressions.  Haskell and ML use a form of type reconstruction called let-polymorphism instead of the explicit type system System F.  The domain of numbers for all languages is integers.  All languages have boolean values and operations, additional arithmetic operations, and composite data.  The majority of the ML implementation was taken from Kinghorn \cite{kinghorn07}.
 
 \section{Importation Syntax}
 
