--- a/thesis.tex
+++ b/thesis.tex
@@ -39,7 +39,8 @@
 \newtheorem{case}{Case}[theorem]
 \newtheorem{subcase}{Case}[case]
 \bibliographystyle{abbrv}
-\setlength{\parindent}{0.25in} \setlength{\parskip}{6pt}
+\setlength{\parindent}{0.25in}
+\setlength{\parskip}{6pt}
 \geometry{verbose,nohead,tmargin=1.25in,bmargin=1in,lmargin=1.5in,rmargin=1.3in}
 \setcounter{tocdepth}{2}
 \newcommand{\captionfonts}{\small\bf\ssp}
