--- a/bibliography.bib
+++ b/bibliography.bib
@@ -111,6 +111,15 @@
   OPTyear = {2004},
 }
 
+@book{pierce02,
+  author = {Benjamin C. Pierce},
+  title = {Types and programming languages},
+  year = {2002},
+  isbn = {0-262-16209-1},
+  publisher = {MIT Press},
+  address = {Cambridge, MA, USA},
+}
+
 @inproceedings{tobin-hochstadt06,
   author = {Sam Tobin-Hochstadt and Matthias Felleisen},
   title = {Interlanguage migration: from scripts to programs},
