--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -2,35 +2,42 @@
 
 Embedding server languages within client languages as expressions succinctly expresses the client-server interaction of interoperation.  Embedded server expressions evaluate to values and convert to equivalent client values.  Value conversion represents servers sending data and clients receiving them.  Since Haskell, ML, and Scheme are functional languages, extended lambda calculi can represent them.
 
-Lambda calculus is a minimal model of computation that embodies the notions of abstracting patterns into functions and applying function abstractions to concrete instances of patterns.  Computation is done by substituting function arguments for free occurrences of corresponding variables within function bodies.  Interoperation between lambda calculi is represented by nesting one language within another as an expression embedded within special syntactic forms that indicate a change of language and expected and actual types of values for both sides of boundaries.
+Lambda calculus is a minimal model of computation that embodies the notions of abstracting patterns into functions and applying function abstractions to concrete instances of patterns.  Computation is done by substituting function arguments for free occurrences of corresponding variables within function bodies.  Interoperation between lambda calculi is represented by nesting languages within languages expressions embedded within special syntactic forms that indicate a change of language and expected and actual types of values for both sides of boundaries.
 
 \section{Core Calculi}
 
 \subsection{Haskell}
 
-Haskell extends lambda calculus in several ways.  First, it adds natural numbers, addition and subtraction operations for natural numbers, and a conditional expression that uses the natural number zero as true and all other natural numbers as false.  Second, it adds list constructions of head and tail subexpressions, lists, and list operations.  It adds lists, which are either a construction of head and tail expressions or empty and operations that access head and tail expressions.
+Lambda calculus is comprised of functions, variables, and function applications.  Haskell extends lambda calculus in several ways.  First, it adds natural numbers, addition and subtraction operations for natural numbers, and a condition that uses the natural number zero as true and all other natural numbers as false.
 
-It adds a static type system called System F, which adds type annotations to certain expressions to enable the calculation of expression types.  Types are defined explicitly by annotations for function parameters and for other terms, .  The presence of explicit types enables the type of any term to be determined, which can be used to determine whether a type error would occur if the term were evaluated.  If no type errors would occur, the term is said to be well-typed; otherwise, it is said to be ill-typed or to have no type.  
+Second, it adds list constructions containing pairs of head and tail expressions, empty lists, operations to access head and tail expressions within list constructions, a condition that uses empty lists as true and list constructions as false, and error reports for head and tail operations that operate on empty lists.
 
-which provides parametric polymorphism whereby the types of expressions can be parameterized and instantiated with various types type abstractions for parameterizing the type of a term, and type applications for instantiating a type abstraction with a type
+Third, it adds a static type system called System F.  System F adds types for natural numbers, lists, and functions and the expressions that contain them.  If the type of an expression is valid, it is well-typed; otherwise, it is ill-typed.  Type errors cannot occur in well-typed expressions.  Haskell does not compute ill-typed expressions.  It adds type annotations to some expressions to enable the calculation and validation of expression types.  It adds parametric polymorphism whereby the types of expressions can be parameterized by type variables and type abstractions and then instantiated with type applications.  It adds types for type variables and type abstractions.
 
-The addition of System F renders the calculus unequivalent to a Turing machine because recursive functions do not have types.  To enable recursion and restore Turing equivalence, a fixed-point operator is added.  The fixed-point operator consumes a function that takes as its parameter its body and produces the body rendered recursive.
+System F renders Haskell Turing-incomplete because Haskell cannot express recursive functions.  Haskell adds a fixed-point operator to restore Turing-completeness.  The operand of the fixed-point operator is a function of a recursive function over the body of the recursive function.
 
+Fourth, it adds evaluation contexts where appropriate according to the spirit of lazy evaluation.
 
+An expression is an instance of any syntactic form.  A reduction or evaluation is a step of computation that applies a rewrite rule of an operational semantics to an expression.  A value is an expression that is irreducible.  Letter subscripts of grammar non-terminals and relations denote the language to which they belong.
 
-Furthermore, it imposes a lazy evaluation strategy where function arguments are not evaluated before term substitution.
+Types, denoted $T$, are comprised of natural numbers, denoted $N$; type variables, denoted $X$; functions, denoted $T\rightarrow T$; type abstractions, denoted $\forall X.T$; and lists, denoted $[T]$.
 
-An expression is an instance of any syntactic form.  A reduction or evaluation is a step of computation that applies a rewrite rule to an expression.  A value is an instance of a syntactic form that is irreducible.  Letter subscripts of grammar non-terminals denote the language to which they belong.
+Haskell values, denoted $v_{H}$, are comprised of natural numbers, denoted $\overline{n}$, which syntactically represents the natural number $n$; list constructions, denoted $\mathtt{cons}$ $e_{H}$ $e_{H}$; empty lists, denoted $\mathtt{nil}^{T}$; functions, denoted $\lambda x:T.e_{H}$; and type abstractions, denoted $\Lambda X.e_{H}$.
 
-Haskell values, denoted $v_{H}$, are comprised of natural numbers, denoted $\overline{n}$, which syntactically represents the natural number $n$; functions, denoted $\lambda x:T.e_{H}$; type abstractions, denoted $\Lambda X.e_{H}$; list constructions, denoted $\mathtt{cons}$ $e_{H}$ $e_{H}$; and empty lists, denoted $\mathtt{nil}^{T}$.  Haskell expressions, denoted $e_{H}$, are comprised of variables, denoted $x$; term applications, denoted $e_{H}$ $e_{H}$; type applications, denoted $e_{H}$ $\lbrace T\rbrace$; conditions, denoted $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$; arithmetic operations, denoted $+$ $e_{H}$ $e_{H}$ and $-$ $e_{H}$ $e_{H}$, list head and tail accessor operations, denoted $\mathtt{hd}$ $e_{H}$ and $\mathtt{tl}$ $e_{H}$; and fixed-point operations, denoted $\mathtt{fix}$ $e_{H}$.  Types, denoted $T$, are comprised of natural numbers, denoted $N$; type variables, denoted $X$; functions, denoted $T\rightarrow T$; universal types, denoted $\forall X.T$; and lists, denoted $[T]$.  Haskell evaluation contexts, denoted $E_{H}$, determine the evaluation strategy by constraining which term matches with the Haskell hole, denoted $[\,]_{H}$.  A Haskell evaluation context can be the Haskell hole, the left term of a term application, the left term of a type application, the guard of a condition, the left operand of an arithmetic operation, the right operand of an arithmetic operation if the left operand is a natural number, the operand of a head or tail access operation, or the operand of a fixed-point operation.
+Haskell expressions, denoted $e_{H}$, are comprised of variables, denoted $x$; function applications, denoted $e_{H}$ $e_{H}$; type applications, denoted $e_{H}$ $\lbrace T\rbrace$; addition and subtraction operations, denoted $+$ $e_{H}$ $e_{H}$ and $-$ $e_{H}$ $e_{H}$, respectively; natural number conditions, denoted $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$; head and tail operations, denoted $\mathtt{hd}$ $e_{H}$ and $\mathtt{tl}$ $e_{H}$, respectively; list conditions, denoted $\mathtt{ifnil}$ $e_{H}$ $e_{H}$ $e_{H}$; fixed-point operations, denoted $\mathtt{fix}$ $e_{H}$; and error reports, denoted $\mathtt{wrong}^{T}$ string.
 
-All variables and type variables in all languages must be unique.  Alpha conversion is implicitly used to resolve name conflicts.
+The Haskell evaluation context, denoted $E_{H}$, determines the Haskell evaluation strategy by constraining which expression matches the Haskell hole, denoted $[\,]_{H}$.  The Haskell evaluation context is the Haskell hole, the left expression of a function application, the left expression of a type application, the left operand of an arithmetic operation, the right operand of an arithmetic operation if the left operand is a value, the guard of a natural number condition, the operand of a head or tail operation, the guard of a list condition, or the operand of a fixed-point operation.
 
-Number superscripts of grammar non-terminals denote individual instances of them.
+Variables and type variables are unique across all languages.  Alpha conversion implicitly resolves name conflicts.
 
-A Haskell type statement can assert a type $T$ is well-formed and contains zero or more free type variables that are in some context $\Gamma$, denoted $\Gamma\vdash_{H}T$.  If a type $T$ is well-formed but contains no free type variables, the context can be omitted, denoted $\vdash_{H}T$.  It can also assert the type $T$ of a term $e_{H}$, denoted $\Gamma\vdash_{H}e_{H}:T$.  A new context can be constructed from an old context $\Gamma$ by extending it with type variables and variable-type associations, denoted $\Gamma,X$ and $\Gamma,x:T$, respectively.  The letter subscript of the type judgment symbol $\vdash$ indicates the typing rules of which language to use.  Type substitution substitutes one type for a second type within a third type, denoted $T_{3}[T_{1}/T_{2}]$.
+The Haskell type statement $\Gamma\vdash_{H}T$ asserts the type $T$ is well-formed and contains zero or more free type variables in the context $\Gamma$.  If the type is well-formed and contains zero free type variables, the context can be omitted, denoted $\vdash_{H}T$.  The Haskell type statement $\Gamma\vdash_{H}e_{H}:T$ asserts the expression $e_{H}$ has type $T$ in the context $\Gamma$.  If $e_{H}$ contains zero free variables and $T$ is well-typed and contains zero free type variables, the context can be omitted, denoted $\vdash_{H}e_{H}:T$.  Extending an old context $\Gamma$ with type variables and variable-type associations, denoted $\Gamma,X$ and $\Gamma,x:T$, respectively, constructs a new context.  Type substitution substitutes one type, $T_{1}$, for a second type, $T_{2}$, within a third type, $T_{3}$, denoted $T_{3}[T_{1}/T_{2}]$.  Number subscripts and superscripts of grammar symbols denote distinct instances of them.
+
+!!! TODO: check defn. of type subst above: what about only replacing free occurrences of type vars?  maybe a second defn. for Ti/Tia?
+!!! TODO: add more discussion for typing rules?
 
 Expression substitution substitutes one expression, $e_{H}^{1}$, for a variable, $x$, within a second expression, $e_{H}^{2}$, denoted $e_{H}^{2}[e_{H}^{1}/x]$.  Any instances of variables that occur only on the right side of a rewrite rule are new and unique and thus do not create a name conflict with other variables.  All rewrite rules are defined with an unspecified evaluation context $\mathscr{E}$.  The evaluation of a single language would instantiate $\mathscr{E}$ to $E_{H}$ for Haskell, to $E_{M}$ for ML, and to $E_{S}$ for Scheme.  The evaluation of multiple languages would instantiate $\mathscr{E}$ according to the language in which programs begin and end.
+
+!!! TODO: add more discussion for OS?
 
 \subsection{ML}
 
