Finished rewriting ch 2 haskell section.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -30,14 +30,19 @@ The Haskell evaluation context, denoted $E_{H}$, determines the Haskell evaluati
 
 Variables and type variables are unique across all languages.  Alpha conversion implicitly resolves name conflicts.
 
-The Haskell type statement $\Gamma\vdash_{H}T$ asserts the type $T$ is well-formed and contains zero or more free type variables in the context $\Gamma$.  If the type is well-formed and contains zero free type variables, the context can be omitted, denoted $\vdash_{H}T$.  The Haskell type statement $\Gamma\vdash_{H}e_{H}:T$ asserts the expression $e_{H}$ has type $T$ in the context $\Gamma$.  If $e_{H}$ contains zero free variables and $T$ is well-typed and contains zero free type variables, the context can be omitted, denoted $\vdash_{H}e_{H}:T$.  Extending an old context $\Gamma$ with type variables and variable-type associations, denoted $\Gamma,X$ and $\Gamma,x:T$, respectively, constructs a new context.  Type substitution substitutes one type, $T_{1}$, for a second type, $T_{2}$, within a third type, $T_{3}$, denoted $T_{3}[T_{1}/T_{2}]$.  Number subscripts and superscripts of grammar symbols denote distinct instances of them.
+\input{model/hce.tex}
 
-!!! TODO: check defn. of type subst above: what about only replacing free occurrences of type vars?  maybe a second defn. for Ti/Tia?
-!!! TODO: add more discussion for typing rules?
+The Haskell typing relation, denoted $\Gamma\vdash_{H}e_{H}:T$, is defined by a set of typing rules that assign types to expressions \cite{pierce02}.  $\Gamma\vdash_{H}e_{H}:T$ is a typing statement that asserts the type of an expression and typing rules are implications between typing statements.  Where the type of an expression depends on the types of its subexpressions, its typing rule uses typing statements about those subexpressions as premises for its conclusion.  An expression $e_{H}$ is well-typed if there is some $T$ with the context $\Gamma$ such that $\Gamma\vdash_{H}e_{H}:T$.  A context is a set of assumptions about the types of variables and the abstraction of type variables.  Since all programs are assumed to be closed, programs containing free variables or free type variables are ill-typed.  Adding to the context $\Gamma$ assumptions about the type variable $X$ and the type $T$ of variable $x$ is denoted $\Gamma,X$ and $\Gamma,x:T$, respectively.  The typing statement $\Gamma\vdash_{H}T$ asserts the type $T$ is well-formed with the context $\Gamma$.  Where the context is empty, it is omitted from typing statements.
 
-Expression substitution substitutes one expression, $e_{H}^{1}$, for a variable, $x$, within a second expression, $e_{H}^{2}$, denoted $e_{H}^{2}[e_{H}^{1}/x]$.  Any instances of variables that occur only on the right side of a rewrite rule are new and unique and thus do not create a name conflict with other variables.  All rewrite rules are defined with an unspecified evaluation context $\mathscr{E}$.  The evaluation of a single language would instantiate $\mathscr{E}$ to $E_{H}$ for Haskell, to $E_{M}$ for ML, and to $E_{S}$ for Scheme.  The evaluation of multiple languages would instantiate $\mathscr{E}$ according to the language in which programs begin and end.
+Natural number values, addition and subtraction operations and their operands, and guards of natural number conditions have type $N$.  Function values, left expressions of function applications, operands of fixed-point operations, have type $T_{1}\rightarrow T_{2}$.  Type abstraction values and expressions of type applications have type $\forall X.T$.  List constructions, tails of list constructions, empty lists, tail operations, operands of head and tail operations, and guards of list conditions have type $[T]$.  Variables have the types they are assumed to have by the context.  If the context does not assume the type of a variable, the variable occurs free and the expression is ill-typed.  If the context does not assume the abstraction of a type variable, the type variable occurs free and the expression is ill-typed.  Function values, empty lists, and error reports have type annotations because their types cannot be calculated otherwise.  Type substitution substitutes one type, $T_{1}$, for free occurrences of a type variable, $X$, within a second type, $T_{2}$, denoted $T_{2}[T_{1}/X]$.  Number subscripts and superscripts of grammar symbols in a typing rule denote distinct instances of them.  Numbers are absent where there is a single instance of a grammar symbol in a typing rule.
 
-!!! TODO: add more discussion for OS?
+\input{model/hctr.tex}
+
+Haskell computations are defined by a set of rewrite rules called an operational semantics.  A rewrite rule rewrites a reducible expression in the evaluation context that matches its left side according to its right side.  Function applications substitute the argument for free occurrences of the function parameter within the function body.  Type applications substitute the argument for free occurrences of the type abstraction parameter within the type abstraction body.  Addition and subtraction operations reduce to the addition and subtraction of their operands, respectively.  Natural number conditions reduce to their true or false expressions if their guards are zero or not zero, respectively.  Head and tail operations on list constructions reduce to the heads and tails of their operands, respectively.  Head and tail operations on empty lists reduce to error reports.  List conditions reduce to their true or false expressions if their guards are empty lists or list constructions, respectively.  Fixed-point operations reduce to their operands substituted for the function parameters of their operands within the function bodies of their operands.  Error reports reduce to errors and terminate the computation.
+
+Expression substitution substitutes one expression, $e_{H}^{1}$, for a variable, $x$, within a second expression, $e_{H}^{2}$, denoted $e_{H}^{2}[e_{H}^{1}/x]$.  Variable instances that occur only on the right side of a rewrite rule must be unique.  All rewrite rules are defined with an unspecified evaluation context $\mathscr{E}$.  The evaluation of a single language would instantiate $\mathscr{E}$ to $E_{H}$ for Haskell, to $E_{M}$ for ML, and to $E_{S}$ for Scheme.  The interoperation of languages would instantiate $\mathscr{E}$ according to the language in which programs begin and end.
+
+\input{model/hcos.tex}
 
 \subsection{ML}
 
@@ -57,9 +62,6 @@ There is one Scheme type called The Scheme Type, $TST$.  Every well-typed term a
 
 The natural number $\overline{0}$ represents true and all other values of any type represent false.  As such, the condition expression reduces to the true alternative if the guard is $\overline{0}$ and to the false alternative otherwise.  The type predicate expressions reduce to $\overline{0}$ if the predicate is true and the natural number $\overline{1}$ if the predicate is false.  The wrong expression discards the current evaluation context and signals an error with an explanation.  Since type errors can occur at run time, rewrite rules must be added to handle such cases by signaling an an error with an explanation.
 
-\input{model/hce.tex}
-\input{model/hctr.tex}
-\input{model/hcos.tex}
 \input{model/mce.tex}
 \input{model/mctr.tex}
 \input{model/mcos.tex}
@@ -71,7 +73,9 @@ The natural number $\overline{0}$ represents true and all other values of any ty
 
 The interoperation calculi extend the core calculi with new expressions, evaluation contexts, typing rules, and rewrite rules to enable language interoperation.  For each pairing of sending and receiving languages, the interoperation calculi must represent a value with an actual and expected type crossing the boundary from the sending language to the receiving language.  Boundary expressions are denoted by a two-letter acronym, where the first letter names the receiving language and the second letter names the sending language.  The expected and actual types are superscripts to the left and right of the first and second letters, respectively.  The expression to be reduced to a value and cross from the sending language to the receiving language is to the right of the letters and types and separated by a space.  For example, the expression $^{T_{1}}HM^{T_{2}}$ $e_{M}$ denotes the ML expression $e_{M}$ with the actual type $T_{2}$ and the expected type $T_{1}$ crossing the boundary from ML to Haskell.  $T_{1}$ and $T_{2}$ must be well-formed according to the Haskell and ML typing rules, respectively; $T_{1}$ must equal $T_{2}$; and $e_{M}$ must have type $T_{2}$ for $^{T_{1}}HM^{T_{2}}$ $e_{M}$ to have type $T_{1}$.  Since all well-typed Scheme expressions have type $TST$, $TST$ is omitted for expected and actual types of boundary expressions.  For each boundary expression, the interoperation calculi add rewrite rules for every combination of sending and receiving languages, expected and actual types, and syntactic form of values.  Rewrite rules for Scheme values crossing boundaries verify the syntactic forms of the values match the expected types.
 
-[!!! add eval contexts for boundary exp exp]
+!!! TODO: add eval contexts for boundary exp exp
+
+!!! TODO: explain label removal t[ti/tia] syntax
 
 \subsection{Natural Numbers}
 
