--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -2,7 +2,7 @@
 
 Embedding server languages within client languages as expressions succinctly expresses the client-server interaction of interoperation.  Embedded server expressions evaluate to values and convert to equivalent client values.  Value conversion represents servers sending data and clients receiving them.  Since Haskell, ML, and Scheme are functional languages, extended lambda calculi can represent them.
 
-Lambda calculus is a minimal model of computation that embodies the notions of abstracting patterns into functions and applying function abstractions to concrete instances of patterns.  Computation is done by substituting function arguments for free occurrences of corresponding variables within function bodies.  Interoperation between lambda calculi is represented by nesting languages within languages expressions embedded within special syntactic forms that indicate a change of language and expected and actual types of values for both sides of boundaries.  An evaluation context determines the evaluation strategy.
+Lambda calculus is a minimal model of computation that embodies the notions of abstracting patterns into functions and applying function abstractions to concrete instances of patterns.  Computation is done by substituting function arguments for free occurrences of corresponding variables within function bodies.  Interoperation between lambda calculi is represented by nesting languages within languages expressions embedded within special syntactic forms that indicate a change of language and expected and actual types of values for both sides of boundaries.  Evaluation contexts determine the evaluation strategy.
 
 \section{Core Calculi}
 
@@ -16,7 +16,7 @@ Third, it adds a static type system called System F.  System F adds types for na
 
 System F renders Haskell Turing-incomplete because Haskell cannot express recursive functions.  Haskell adds a fixed-point operator to restore Turing-completeness.  The operand of the fixed-point operator is a function of a recursive function over the body of the recursive function.
 
-Fourth, the values and evaluation context of Haskell follow the spirit of lazy evaluation in that expressions are reduced only where necessary.
+Fourth, the values and evaluation contexts of Haskell follow the spirit of lazy evaluation in that expressions are reduced only where necessary.
 
 An expression is an instance of any syntactic form.  A reduction or evaluation is a step of computation that applies a rewrite rule of an operational semantics to an expression.  A value is an expression that is irreducible.  Letter subscripts of grammar non-terminals and relations denote the language to which they belong.
 
@@ -26,7 +26,7 @@ Haskell values, denoted $v_{H}$, are comprised of natural numbers, denoted $\ove
 
 Haskell expressions, denoted $e_{H}$, are comprised of variables, denoted $x$; function applications, denoted $e_{H}$ $e_{H}$; type applications, denoted $e_{H}$ $\lbrace T\rbrace$; addition and subtraction operations, denoted $+$ $e_{H}$ $e_{H}$ and $-$ $e_{H}$ $e_{H}$, respectively; natural number conditions, denoted $\mathtt{if0}$ $e_{H}$ $e_{H}$ $e_{H}$; head and tail operations, denoted $\mathtt{hd}$ $e_{H}$ and $\mathtt{tl}$ $e_{H}$, respectively; list conditions, denoted $\mathtt{ifnil}$ $e_{H}$ $e_{H}$ $e_{H}$; fixed-point operations, denoted $\mathtt{fix}$ $e_{H}$; and error reports, denoted $\mathtt{wrong}^{T}$ string.
 
-The Haskell evaluation context, denoted $E_{H}$, determines the Haskell evaluation strategy by constraining which expression matches the Haskell hole.  The Haskell evaluation context is the Haskell hole, denoted $[\,]_{H}$; left expressions of function applications, denoted $E_{H}$ $e_{H}$; left expressions of type applications, denoted $E_{H}$ $\lbrace T\rbrace$; left operands of arithmetic operations, denoted $o$ $E_{H}$ $e_{H}$; right operands of arithmetic operations if left operands are values, denoted $o$ $v_{H}$ $E_{H}$; guards of natural number conditions, denoted $\mathtt{if0}$ $E_{H}$ $e_{H}$ $e_{H}$; operands of head and tail operations, denoted $f$ $E_{H}$; guards of list conditions, denoted $\mathtt{ifnil}$ $E_{H}$ $e_{H}$ $e_{H}$; and operands of fixed-point operations, denoted $\mathtt{fix}$ $E_{H}$.
+Haskell evaluation contexts, denoted $E_{H}$, determine the Haskell evaluation strategy by constraining which expression matches the Haskell hole.  Haskell evaluation contexts are comprised of the Haskell hole, denoted $[\,]_{H}$; left expressions of function applications, denoted $E_{H}$ $e_{H}$; left expressions of type applications, denoted $E_{H}$ $\lbrace T\rbrace$; left operands of arithmetic operations, denoted $o$ $E_{H}$ $e_{H}$; right operands of arithmetic operations if left operands are values, denoted $o$ $v_{H}$ $E_{H}$; guards of natural number conditions, denoted $\mathtt{if0}$ $E_{H}$ $e_{H}$ $e_{H}$; operands of head and tail operations, denoted $f$ $E_{H}$; guards of list conditions, denoted $\mathtt{ifnil}$ $E_{H}$ $e_{H}$ $e_{H}$; and operands of fixed-point operations, denoted $\mathtt{fix}$ $E_{H}$.
 
 Variables and type variables are unique across all languages.  Alpha conversion implicitly resolves name conflicts.
 
@@ -40,7 +40,7 @@ Variables have the types they are assumed to have by the context.  If the contex
 
 \input{model/hctr.tex}
 
-Haskell computations are defined by a set of rewrite rules called an operational semantics.  A rewrite rule rewrites a reducible expression in the evaluation context that matches its left side according to its right side.  Function applications substitute the argument for free occurrences of the function parameter within the function body.  Type applications substitute the argument for free occurrences of the type abstraction parameter within the type abstraction body.  Addition and subtraction operations reduce to the addition and subtraction of their operands, respectively.  Natural number conditions reduce to their true or false expressions if their guards are zero or not zero, respectively.  Head and tail operations on list constructions reduce to the heads and tails of their operands, respectively.  Head and tail operations on empty lists reduce to error reports.  List conditions reduce to their true or false expressions if their guards are empty lists or list constructions, respectively.  Fixed-point operations reduce to their operands substituted for the function parameters of their operands within the function bodies of their operands.  Error reports reduce to errors and terminate the computation.
+Haskell computations are defined by a set of rewrite rules called an operational semantics.  A rewrite rule rewrites a reducible expression in an evaluation context that matches its left side according to its right side.  Function applications substitute the argument for free occurrences of the function parameter within the function body.  Type applications substitute the argument for free occurrences of the type abstraction parameter within the type abstraction body.  Addition and subtraction operations reduce to the addition and subtraction of their operands, respectively.  Natural number conditions reduce to their true or false expressions if their guards are zero or not zero, respectively.  Head and tail operations on list constructions reduce to the heads and tails of their operands, respectively.  Head and tail operations on empty lists reduce to error reports.  List conditions reduce to their true or false expressions if their guards are empty lists or list constructions, respectively.  Fixed-point operations reduce to their operands substituted for the function parameters of their operands within the function bodies of their operands.  Error reports reduce to errors and terminate the computation.
 
 Expression substitution substitutes one expression, $e_{H}^{1}$, for a variable, $x$, within a second expression, $e_{H}^{2}$, denoted $e_{H}^{2}[e_{H}^{1}/x]$.  Variable instances that occur only on the right side of a rewrite rule must be unique.  All rewrite rules are defined with an unspecified evaluation context $\mathscr{E}$.  The evaluation of a single language would instantiate $\mathscr{E}$ to $E_{H}$ for Haskell, to $E_{M}$ for ML, and to $E_{S}$ for Scheme.  The interoperation of languages would instantiate $\mathscr{E}$ according to the language in which programs begin and end.
 
@@ -48,9 +48,9 @@ Expression substitution substitutes one expression, $e_{H}^{1}$, for a variable,
 
 \subsection{ML}
 
-ML is identical to Haskell except that it uses strict evaluation instead of lazy evaluation.  This difference affects list constructions and the evaluation context.  Haskell reduces expressions only where necessary and ML reduces expressions regardless of necessity, thus their definition of values are different.  Haskell list constructions are values regardless of whether their heads and tails are values, but ML list constructions are values where their heads and tails are values.  To reflect these differences, ML adds a list construction expression where the head and tail are expressions, denoted $\mathtt{cons}$ $e_{M}$ $e_{M}$, and changes the head and tail of the list construction value to values, denoted $\mathtt{cons}$ $v_{M}$ $v_{M}$.
+ML is identical to Haskell except that it uses strict evaluation instead of lazy evaluation.  This difference affects list constructions and evaluation contexts.  Haskell reduces expressions only where necessary and ML reduces expressions regardless of necessity, thus their definition of values are different.  Haskell list constructions are values regardless of whether their heads and tails are values, but ML list constructions are values where their heads and tails are values.  To reflect these differences, ML adds a list construction expression where the head and tail are expressions, denoted $\mathtt{cons}$ $e_{M}$ $e_{M}$, and changes the head and tail of the list construction value to values, denoted $\mathtt{cons}$ $v_{M}$ $v_{M}$.
 
-The ML evaluation context extends the Haskell evaluation context such that all expressions are reduced and the order of evaluation is deterministic.  In addition to the Haskell definition, the ML evaluation context is right expressions of function applications where left expression are values, heads of list constructions, and tails of list construction where heads are values.
+ML evaluation contexts extend Haskell evaluation contexts such that all expressions are reduced and the order of evaluation is deterministic.  In addition to the Haskell definition, ML evaluation contexts are right expressions of function applications where left expression are values, heads of list constructions, and tails of list construction where heads are values.
 
 \input{model/mce.tex}
 
@@ -64,7 +64,7 @@ Scheme is identical to ML except that it removes the static type system and adds
 
 The dynamic type system adds type predicate expressions that determine the types of values.  $\mathtt{num?}$ $e_{S}$ determines whether $e_{S}$ is a natural number.  $\mathtt{list?}$ $e_{S}$ determines whether $e_{S}$ is a list.  $\mathtt{fun?}$ $e_{S}$ determines whether $e_{S}$ is a function.
 
-In addition to the ML evaluation context, the Scheme evaluation context is the expression of type predicates, denoted $p$ $E_{S}$.
+In addition to ML evaluation contexts, Scheme evaluation contexts are the expression of type predicates, denoted $p$ $E_{S}$.
 
 \input{model/sce.tex}
 
@@ -78,21 +78,25 @@ It changes the natural number condition to reduce to one if the guard is not zer
 
 \section{Interoperation Calculi}
 
-The interoperation calculi extend the core calculi with new expressions, evaluation contexts, typing rules, and rewrite rules to enable language interoperation.  For each pairing of sending and receiving languages, the interoperation calculi must represent a value with an actual and expected type crossing the boundary from the sending language to the receiving language.  Boundary expressions are denoted by a two-letter acronym, where the first letter names the receiving language and the second letter names the sending language.  The expected and actual types are superscripts to the left and right of the first and second letters, respectively.  The expression to be reduced to a value and cross from the sending language to the receiving language is to the right of the letters and types and separated by a space.  For example, the expression $^{T_{1}}HM^{T_{2}}$ $e_{M}$ denotes the ML expression $e_{M}$ with the actual type $T_{2}$ and the expected type $T_{1}$ crossing the boundary from ML to Haskell.  $T_{1}$ and $T_{2}$ must be well-formed according to the Haskell and ML typing rules, respectively; $T_{1}$ must equal $T_{2}$; and $e_{M}$ must have type $T_{2}$ for $^{T_{1}}HM^{T_{2}}$ $e_{M}$ to have type $T_{1}$.  Since all well-typed Scheme expressions have type $TST$, $TST$ is omitted for expected and actual types of boundary expressions.  For each boundary expression, the interoperation calculi add rewrite rules for every combination of sending and receiving languages, expected and actual types, and syntactic form of values.  Rewrite rules for Scheme values crossing boundaries verify the syntactic forms of the values match the expected types.
+The interoperation calculi extend the core calculi with new expressions, evaluation contexts, typing rules, and rewrite rules to express interoperation.  They add boundary expressions, which represent values with actual (server) and expected (client) types crossing from server languages to client languages.  Boundaries are denoted by two-letter acronyms, where the first letter names servers and the second letters names clients.  Expected types are superscripts to the left of first letters, and actual types are superscripts to the right of second letters.  Expressions to be reduced to values and cross between languages are to the right of the letters and types, separated by a space.  For example, the expression $^{T_{1}}HM^{T_{2}}$ $e_{M}$ denotes ML expression $e_{M}$ with actual type $T_{2}$ and expected type $T_{1}$ crossing from ML to Haskell.  Since a set of $n$ interoperable languages requires $n\times(n-1)$ boundary expressions, this model requires six boundaries.
 
-!!! TODO: add eval contexts for boundary exp exp
+They add evaluation contexts for the expressions of boundaries, $^{T}HM^{T}$ $E_{M}$ for example.
 
-!!! TODO: explain label removal t[ti/tia] syntax
+They add typing rules for boundaries.  For a boundary to be well-typed, its actual and expected types must be well-formed and equivalent and the type of its expression must equal the actual type of the boundary.  The types of boundaries are their expected types.  $TST$ is omitted from boundary notation because all well-typed Scheme expressions have type $TST$.
 
-\subsection{Natural Numbers}
+They add rewrite rules for every combination of boundary, expected and actual types, and syntactic forms of values.  Rewrite rules for boundaries containing Scheme values verify that their syntactic forms match their expected types and report type errors.
 
-Natural numbers remain unchanged when they cross boundaries because all of the languages have the same number domain.  For example, $^{N}HM^{N}$ $\overline{n}\rightarrow\overline{n}$.  In the cases of $^{N}HS$ $v_{S}$ and $^{N}MS$ $v_{S}$, where $v_{S}$ is not a natural number, the boundary expressions reduce to type errors that explain that the Scheme value is not a natural number.
+The actual and expected types of boundaries determine their reduction.
 
-\subsection{Functions}
+\subsection{Natural Number Types}
+
+Natural numbers do not change when they cross languages because the languages have the same number domain.  For example, $^{N}HM^{N}$ $\overline{n}$ reduces to $\overline{n}$.  For $^{N}HS$ $v_{S}$ and $^{N}MS$ $v_{S}$, where $v_{S}$ is not a natural number, the boundaries reduce to type error reports.
+
+\subsection{Function Types}
 
 Functions cannot be directly converted when they cross boundaries because each language grammar is different, Haskell and ML do not have a reasonable equivalent for every Scheme function, and functions may behave differently if they are evaluated with a different evaluation strategy.  Instead, a function from the sending language is wrapped inside a function from the receiving language with a boundary expression.  The wrapper function passes its argument across a boundary from the receiving language to the sending language.  Within the sending language, the original function is applied to the argument, and the result is passed back across a boundary to the receiving language.  The wrapper function produces the result from the sending language as its result.  To do this, a language is allowed to perform substitution within itself across boundaries.  For example, the Scheme function $\lambda x_{1}.e_{S}$ represented in Haskell with type $T_{1}\rightarrow T_{2}$ is $\lambda x_{2}:T_{1}.(^{T_{2}}HS$ $((\lambda x_{1}.e_{S})$ $(SH^{T_{1}}$ $x_{2})))$.  If the Haskell function is applied to an argument, the argument crosses the $SH^{T_{1}}$ boundary from Haskell to Scheme, the Scheme function is applied to it, and its result crosses the $^{T_{2}}HS$ boundary from Scheme back to Haskell, which becomes the result of the function application.
 
-\subsection{Universal Types}
+\subsection{Type Abstraction Types}
 
 If the expected and actual types of a boundary expression are a universal type, the contained value is either a type abstraction or a Scheme value contained within another boundary expression.  If it is a type abstraction, $\Lambda X.e_{M}$ with type $\forall X.T$ for example, the boundary expression reduces to a type abstraction of $X$ for a boundary with expected and actual type $T$ containing $e_{M}$.  Therefore $^{\forall X.T}HM^{\forall X.T}$ $(\Lambda X.e_{M})\rightarrow\Lambda X.(^{T}HM^{T}$ $e_{M})$.  If it is a Scheme value contained within another boundary expression, $^{\forall X.T}MS$ $v_{S}$ for example, the boundary expression reduces to a new boundary expression where $v_{S}$ crosses from Scheme to Haskell with expected type $\forall X.T$ and actual type $TST$.  Therefore $^{\forall X.T}HM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})\rightarrow{^{\forall X.T}H}S$ $v_{S}$.
 
@@ -119,7 +123,9 @@ If it is a type abstraction, $\Lambda X.e_{H}$ with type $\forall X.T$ for examp
 
 If it is a Scheme value contained within another boundary expression, the boundary expression reduces to the Scheme value.  For example, $SH^{T}$ $(^{T}HS$ $v_{S})\rightarrow$ $v_{S}$.
 
-\subsection{Lists}
+!!! TODO: explain label removal t[ti/tia] syntax
+
+\subsection{List Types}
 
 If the expected and actual types of a boundary expression are a list type, the contained value is either an empty list or a list construction.  If it is an empty list, the boundary expression reduces to the empty list.  For example, $^{[T]}HM^{[T]}$ $\mathtt{nil}^{T}$ reduces to $\mathtt{nil}^{T}$.  If it is an ML list construction crossing to Haskell, the boundary expression reduces to a list construction where the head and tail are the head and tail of the ML list construction wrapped in boundary expressions, respectively.  For example, $\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2}$ with type $[T]$ would reduce to $\mathtt{cons}$ $(^{T}HM^{T}$ $v_{M}^{1})$ $(^{[T]}HM^{[T]}$ $v_{M}^{2})$.  If it is a Haskell list construction crossing to ML, the boundary expression should be irreducible.  Since Haskell list constructions are values, they can be recursive and therefore infinite in length.  Converting a list construction from Haskell to ML like a list construction is converted from ML to Haskell would reduce the tail until it is a value.  If the list construction were infinite, the tail may reduce to the list construction, and thus never reduce to a value, and the computation would loop forever.  Therefore $^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ is a value.
 
